{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 550,
  "lineage": "d5b15199-2471-3d66-f05e-f301965f599d",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea0f26a6d50850c5",
            "arn": "arn:aws:ec2:eu-west-1:275504893954:instance/i-0c1957c3cfdea4354",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c1957c3cfdea4354",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "centos",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0795ecec5c4e7a6be",
            "private_dns": "ip-10-0-1-127.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0811c56fbf907de3d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3a72d1b5e220e63",
            "tags_all": {
              "Environment": "Development",
              "Owner": "Ops",
              "Terraform": "True"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05af8cccd2500348e"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.demo",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea0f26a6d50850c5",
            "arn": "arn:aws:ec2:eu-west-1:275504893954:instance/i-0a4ef598a4d2da38a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4ef598a4d2da38a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "centos",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0565799e87b880e55",
            "private_dns": "ip-10-0-2-88.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.88",
            "public_ip": "34.253.222.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07bf8bb15d494e4bf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-040c6bbd88278cff3",
            "tags_all": {
              "Environment": "Development",
              "Owner": "Ops",
              "Terraform": "True"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f18e5b9e7e193a35"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.demo",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:275504893954:security-group/sg-0f18e5b9e7e193a35",
            "description": "Allow SSH traffic via Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f18e5b9e7e193a35",
            "ingress": [
              {
                "cidr_blocks": [
                  "2.132.103.97/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-sg",
            "name_prefix": "",
            "owner_id": "275504893954",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "Development",
              "Owner": "Ops",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e6e43a423d4ce09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:275504893954:internet-gateway/igw-09536468ce63565b8",
            "id": "igw-09536468ce63565b8",
            "owner_id": "275504893954",
            "tags_all": {
              "Environment": "Development",
              "Owner": "Ops",
              "Terraform": "True"
            },
            "vpc_id": "vpc-01e6e43a423d4ce09"
          },
          "dependencies": [
            "module.vpc.aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:275504893954:route-table/rtb-02e8496dbdfdd8d2a",
            "id": "rtb-02e8496dbdfdd8d2a",
            "owner_id": "275504893954",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {
              "Environment": "Development",
              "Owner": "Ops",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e6e43a423d4ce09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:275504893954:route-table/rtb-04dc5a0f687615840",
            "id": "rtb-04dc5a0f687615840",
            "owner_id": "275504893954",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09536468ce63565b8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Environment": "Development",
              "Owner": "Ops",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e6e43a423d4ce09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df060bd32174c85e",
            "route_table_id": "rtb-02e8496dbdfdd8d2a",
            "subnet_id": "subnet-0c3a72d1b5e220e63"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7455c5cba92bd3c",
            "route_table_id": "rtb-04dc5a0f687615840",
            "subnet_id": "subnet-040c6bbd88278cff3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:275504893954:subnet/subnet-0c3a72d1b5e220e63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3a72d1b5e220e63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "275504893954",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Environment": "Development",
              "Owner": "Ops",
              "Terraform": "True"
            },
            "vpc_id": "vpc-01e6e43a423d4ce09"
          },
          "dependencies": [
            "module.vpc.aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:275504893954:subnet/subnet-040c6bbd88278cff3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040c6bbd88278cff3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "275504893954",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Environment": "Development",
              "Owner": "Ops",
              "Terraform": "True"
            },
            "vpc_id": "vpc-01e6e43a423d4ce09"
          },
          "dependencies": [
            "module.vpc.aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "newvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:275504893954:vpc/vpc-01e6e43a423d4ce09",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04347fd6fc2334e9d",
            "default_route_table_id": "rtb-0686aadd3aed7a06d",
            "default_security_group_id": "sg-05af8cccd2500348e",
            "dhcp_options_id": "dopt-1eb70f78",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01e6e43a423d4ce09",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0686aadd3aed7a06d",
            "owner_id": "275504893954",
            "tags_all": {
              "Environment": "Development",
              "Owner": "Ops",
              "Terraform": "True"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:275504893954:vpc-endpoint/vpce-000f79e7df0c948c1",
            "cidr_blocks": [
              "18.34.32.0/20",
              "3.5.64.0/21",
              "3.5.72.0/23",
              "52.92.0.0/17",
              "52.218.0.0/17"
            ],
            "id": "vpce-000f79e7df0c948c1",
            "owner_id": "275504893954",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6da54004",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-02e8496dbdfdd8d2a"
            ],
            "service_name": "com.amazonaws.eu-west-1.s3",
            "state": "available",
            "tags_all": {
              "Environment": "Development",
              "Owner": "Ops",
              "Terraform": "True"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-01e6e43a423d4ce09"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.newvpc"
          ]
        }
      ]
    }
  ]
}